--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -452,6 +452,8 @@
     <None Include="Assets\Models\Gem.asset" />
     <None Include="Assets\Materials\CastleMaterial.asset" />
     <None Include="Assets\Materials\BoatInteriorMaterial.asset" />
+    <None Include="Assets\Models\Person.asset" />
+    <None Include="Assets\Materials\PersonMaterial.asset" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\WaterPS.hlsl">
