--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -179,6 +179,8 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\BaseModel.cpp" />
+    <ClCompile Include="src\InstancedModel.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\GerstnerWaves.cpp" />
     <ClCompile Include="src\SkyboxPass.cpp" />
@@ -297,6 +299,8 @@
     <ClCompile Include="src\SSAOPass.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\BaseModel.h" />
+    <ClInclude Include="src\InstancedModel.h" />
     <ClInclude Include="src\GameObject.h" />
     <ClInclude Include="src\GerstnerWaves.h" />
     <ClInclude Include="src\SkyboxPass.h" />
